# FileNote

./: README.md  README_cn.md  setup.cfg
src/file_note/: __init__.py  config.py  main.py  note.py
