[metadata]
name = FileNote
version = 0.0.1
author = warpin
author_email = warpin@163.com
description = Add notes to files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wapping/FileNote
project_urls =
    Bug Tracker = https://github.com/wapping/FileNote/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fino = file_note.main:main
